# Amarillo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.ko.md  README.md  docker-compose.yml
.gsd/: BACKLOG.md  DECISIONS.md  EXAMPLES-ADMIN-SUMMARY.md  FE-WIRE-PLAN.md  FE-WIRE-SUMMARY.md  FE-WIRE2-PLAN.md  FE-WIRE2-SUMMARY.md  HARDEN-SUMMARY.md  HARDEN2-PLAN.md  HARDEN2-SUMMARY.md  HARDEN3-PLAN.md  HARDEN3-SUMMARY.md  HARDEN4-SUMMARY.md  KNOWLEDGE.md  M001-ROADMAP.md  M001-SUMMARY.md  M002-SUMMARY.md  M003-SUMMARY.md  M004-SUMMARY.md  M005-SUMMARY.md  M006-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  S01-PLAN.md  S01-SUMMARY.md  S02-PLAN.md  S02-SUMMARY.md  S03-PLAN.md  S03-SUMMARY.md  S04-PLAN.md  S04-SUMMARY.md  S05-PLAN.md  S05-SUMMARY.md  S06-PLAN.md  S06-SUMMARY.md  S07-PLAN.md  S07-SUMMARY.md  S08-PLAN.md  S08-SUMMARY.md  S09-PLAN.md  (+25 more)
crates/api/: Cargo.toml
crates/api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  response.rs
crates/api/src/routes/: alerts.rs  contract_labels.rs  failed_tx.rs  mod.rs  state.rs
crates/api/tests/: auth.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  queries.rs  validators.rs
crates/db/tests/: alert_rate.rs  alerts.rs  category_diagnosis.rs  failed_tx.rs  function_signature.rs  labels.rs  rollback.rs
crates/decoder/src/: abi.rs  classifier.rs  events.rs  lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: alerts.rs  config.rs  main.rs  worker.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  client.rs  config.rs  dto.rs  error.rs  event.rs  format.rs  main.rs  terminal.rs
crates/tui/src/ui/: detail.rs  failed_tx.rs  mod.rs  overview.rs
docs/: api-alerts.md  api-failed-tx.md  cookbook.md  realtime-follow.md
examples/python-client/: README.md  client.py  examples.py
examples/typescript-client/: README.md  ambient.d.ts  client.ts  examples.ts  tsconfig.json
migrations/: 20240103000001_add_block_hashes.sql  20240104000001_add_alert_tables.sql  20240105000001_add_contract_label.sql  20240106000001_add_function_signature.sql  20240107000001_add_category_diagnosis.sql  20240108000001_add_alert_subscription_rate.sql  20240109000001_subdivide_categories.sql
scripts/: verify-alerts.sh  verify-failed-tx-by-label.sh  verify-failed-tx.sh
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.smoke.test.tsx  App.tsx  index.css  main.tsx
web/src/api/: client.test.ts  client.ts  contract.test.ts  contract.ts  hooks.ts  types.ts
web/src/components/: AddressBadge.tsx  ApiKeyInput.tsx  AsyncState.tsx  DataTable.tsx  ErrorBoundary.tsx  KpiCard.tsx  Layout.tsx  Pagination.tsx  WorkspacePanel.tsx
web/src/lib/: chart.ts  format.ts  urlFilters.ts
web/src/pages/: Alerts.tsx  FailedTx.tsx  Overview.tsx  PoolDetail.tsx  Pools.tsx  Traders.tsx
web/src/state/: apiKey.tsx
