[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/db",
    "crates/decoder",
    "crates/indexer",
    "crates/tui",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum
alloy = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Numeric
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Encoding
hex = "0.4"

# Resilience
backoff = { version = "0.4", features = ["tokio"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Outbound HTTP (alerts dispatcher, S08) — minimal features, no defaults
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Signing (HMAC-SHA256 for webhook bodies, S08) — RustCrypto, no_std-friendly
hmac = "0.12"
sha2 = "0.10"

# URL parsing for SSRF guard (S08) — shared via db::validators
url = "2"

# CSPRNG for webhook signing-secret generation (S08, API layer)
getrandom = "0.2"

# Constant-time equality for admin API key comparison (S16/M006, API layer)
subtle = { version = "2.5", default-features = false }

# TUI (crates/tui) — terminal client over the REST API
ratatui = "0.29"
crossterm = "0.28"          # ratatui 0.29가 의존하는 버전과 일치 (Backend 타입 정합)
futures-util = "0.3"        # crossterm EventStream(Stream) 구동
tracing-appender = "0.2"    # 파일 비동기 로깅 (non-blocking + WorkerGuard)
