[package]
name = "tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal UI for the amarillo Failure Intelligence API"

[[bin]]
name = "amarillo-tui"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# HTTP client — workspace base ships only `rustls-tls`; the TUI needs `json`
# for response deserialization. Feature unification is additive and harmless
# to the other crates.
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time (timeAgo, RFC3339 window filters)
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging — to a FILE, never stdout/stderr (the TUI owns the terminal)
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Terminal UI
ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
futures-util.workspace = true
